--- a/gdellapeProject-master/web/css/internshiptutor.css
+++ b/gdellapeProject-master/web/css/internshiptutor.css
@@ -187,7 +187,7 @@ h4.testo-scuro p {
 }
 
 .account-settings-item {
-    padding: 20px 24px;
+    padding: 24px 24px 20px 24px;
     margin: 0px;
 }
 
