--- a/gdellapeProject-master/web/css/print.css
+++ b/gdellapeProject-master/web/css/print.css
@@ -88,5 +88,15 @@ ul {
     page-break-after: always;
 }
 .centra{
-    margin: 0px !important;
+    margin: 0 !important;
+}
+
+.modulo-segreteria{
+    margin: 0 !important;
+    padding: 0 !important;
+    border: none !important;
+}
+
+.h1-modulo-segreteria{
+    border-bottom:none !important;
 }
